--- a/calculator/src/components/Button.css
+++ b/calculator/src/components/Button.css
@@ -1,8 +1,27 @@
 .number {
     background-color: bisque;
     color: #000;
-    margin: 10px;
+    margin: 1rem;
     padding: 1rem;
     font-size: 2rem;
-    border-radius: 10px;
+    width: 2.5rem;
+    height: 2.5rem;
+    text-align: center;
+    border-radius: 0.5rem;
+    border-color: black;
+    border-width: 10px;
+}
+
+.equal{
+    background-color:blanchedalmond;
+    color: #000;
+    margin: 1rem;
+    padding: 1rem;
+    font-size: 2rem;
+    width: 9rem;
+    height: 2.5rem;
+    text-align: center;
+    border-radius: 0.5rem;
+    border-color: black;
+    border-width: 10px;
 }
