--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -1,10 +1,10 @@
 .text {
-  background-color: bisque;
+  background-color: #F0EFF5;
   color: #000;
   margin: 1rem;
   padding: 1rem;
   font-size: 3rem;
-  border-radius: 0.5rem;
+  border-radius: 2rem;
   text-align: end;
   width: 22.5rem;
   border-color: black;
@@ -17,15 +17,14 @@
   position: absolute;
   top: 0; left: 0;
   display: flex;
-  background: rgb(145,64,199);
-  background: linear-gradient(90deg, rgba(145,64,199,1) 0%, rgba(179,5,5,1) 50%, rgba(249,162,41,1) 100%);
+  background: #D4D4D2;
 }
 
 .inner{
   margin: 4rem auto;
   padding: 1rem;
-  background-color: burlywood;
-  border-radius: 1rem;
+  background-color: #1D1D1D;
+  border-radius: 3rem;
   width: 26.5rem;
   height: 40.5 rem;
 }
